--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -51,8 +51,7 @@
    "id": "e7fe3c71",
    "metadata": {},
    "source": [
-    "### - Numerical Variables\n",
-    "We employ histograms as the primary visualization tool for numerical variables because they effectively illustrate how frequently values occur within specific ranges. By examining these distributions, we can identify the central tendencies, detect skewness (e.g., a long tail for higher values), and uncover any outliers that may heavily influence subsequent modeling."
+    "### - Numerical Variables"
    ]
   },
   {
@@ -101,19 +100,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be0a3b9d",
-   "metadata": {},
-   "source": [
-    "From the three histograms, we gain distinct insights about each variable’s underlying distribution. StudyTimeWeekly appears to have a moderate peak around the mid-range hours, suggesting that most students dedicate a comparable amount of time each week, with relatively fewer students at the extreme ends. Absences shows a right-skewed pattern: while a large portion of students have few absences, a smaller subset exhibits notably higher absentee rates—an important aspect to investigate further due to its potential academic impact. Meanwhile, GPA tends toward a fairly broad distribution, with indications of a central hump suggesting most students cluster around an intermediate score, and a gradually tapering tail at the higher and lower ends. Overall, these histograms confirm that each numerical variable exhibits unique characteristics worth deeper exploration and potential transformation in later steps of the analysis."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8c07266f",
    "metadata": {},
    "source": [
-    "### - Catagorical Variables\n",
-    "We use pie charts because they provide a straightforward way to visualize proportions among distinct categories. By looking at how each slice contributes to the whole, we gain immediate insights into the relative frequency of each category. This high-level view is invaluable for spotting imbalances (e.g., a category overwhelmingly outnumbering others) and for planning how these variables might factor into subsequent analyses or modeling."
+    "### - Catagorical Variables"
    ]
   },
   {
@@ -162,14 +152,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6976b93",
-   "metadata": {},
-   "source": [
-    "In conclusion, the pie charts provide a concise view of the composition of our categorical variables, revealing notable imbalances and predominances within groups. The visualizations highlight key distributions across Gender, Ethnicity, Tutoring, Extracurricular activities, Sports, Music, and Volunteering, which will help in pinpointing potential biases and ensuring balanced representation in later analyses and model development."
    ]
   },
   {
