eda insights update

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -100,6 +100,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb01f7bd",
+   "metadata": {},
+   "source": [
+    "1) StudyTimeWeekly: The majority of students cluster between 0–10 hours/week, with a long right tail stretching to ~20 hrs. This suggests a small subset of very high‑effort students—worth flagging as “super‑studiers” or potential outliers.\n",
+    "\n",
+    "2) Absences: Absences center around 10–20 days, but there’s a tail up to 29. That tail may indicate chronic absenteeism requiring special handling or capping.\n",
+    "3) GPA: GPA has a peak around 1.5–2.0, then a secondary bump near 4.0 (ceiling effect). The perfect‑4 spike suggests grade inflation or particularly high achievers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c07266f",
    "metadata": {},
    "source": [
@@ -152,6 +163,18 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8990ce2c",
+   "metadata": {},
+   "source": [
+    "- Participation Flags: Extracurricular ≈ 12 % participate, Sports ≈ 19 %, Music ≈ 7 %, Volunteering ≈ 5 %.\n",
+    "\n",
+    "    - Low overall participation indicates untapped engagement opportunities.\n",
+    "\n",
+    "- Tutoring splits almost evenly (~50/50), implying it may be a strong predictor to explore."
    ]
   },
   {
@@ -209,6 +232,18 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6382b489",
+   "metadata": {},
+   "source": [
+    "- Age peaks at 16–17;\n",
+    "\n",
+    "- ParentalEducation/Support skew slightly high (modes at 2–3), suggesting most parents hold mid‑level credentials and are moderately supportive;\n",
+    "\n",
+    "- GradeClass shows spikes at classes 2 and 4—double‑check if these represent larger cohorts or coding artifacts."
    ]
   },
   {
@@ -271,6 +306,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d41810aa",
+   "metadata": {},
+   "source": [
+    "- StudyTimeWeekly & GPA both increase monotonically with GradeClass.\n",
+    "\n",
+    "- Absences decline slightly in higher classes, hinting that attendance improves as students progress."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "74048f4e",
    "metadata": {},
    "source": [
@@ -322,6 +367,14 @@
     "# Adjust layout\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ec1b338",
+   "metadata": {},
+   "source": [
+    "- Higher‑class students are more likely to receive tutoring and join extracurriculars—supporting the idea that added resources/activities boost performance."
    ]
   },
   {
@@ -378,6 +431,14 @@
     "# Adjust layout\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39fa7710",
+   "metadata": {},
+   "source": [
+    "- Clear positive association: students in higher GradeClasses tend to come from families with higher education and support levels."
    ]
   },
   {
