eda analysis update

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -170,11 +170,7 @@
    "id": "8990ce2c",
    "metadata": {},
    "source": [
-    "- Participation Flags: Extracurricular ≈ 12 % participate, Sports ≈ 19 %, Music ≈ 7 %, Volunteering ≈ 5 %.\n",
-    "\n",
-    "    - Low overall participation indicates untapped engagement opportunities.\n",
-    "\n",
-    "- Tutoring splits almost evenly (~50/50), implying it may be a strong predictor to explore."
+    "- Tutoring, extracurriculars, and sports all hover around the 30–40 % mark, so they’ll each carry enough variation to help explain GradeClass—but music and volunteering, at ~20 % and ~16 %, may need to be grouped or re‑encoded if sparse classes is going to be a problem."
    ]
   },
   {
@@ -239,11 +235,7 @@
    "id": "6382b489",
    "metadata": {},
    "source": [
-    "- Age peaks at 16–17;\n",
-    "\n",
-    "- ParentalEducation/Support skew slightly high (modes at 2–3), suggesting most parents hold mid‑level credentials and are moderately supportive;\n",
-    "\n",
-    "- GradeClass shows spikes at classes 2 and 4—double‑check if these represent larger cohorts or coding artifacts."
+    "- GradeClass: Huge skew into class 4 (~1,210) vs. class 0 (~110). This imbalance will need addressing (e.g. stratified sampling or class weighting) before model training."
    ]
   },
   {
@@ -477,6 +469,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51832106",
+   "metadata": {},
+   "source": [
+    "– **GPA vs. Absences**: very strong negative correlation (~–0.92), confirming that more absences almost always mean lower grades.  \n",
+    "– **GPA vs. StudyTimeWeekly**: mild positive correlation (~+0.18), suggesting more study time does help but with diminishing returns.  \n",
+    "– **StudyTimeWeekly vs. Absences**: essentially uncorrelated, meaning attendance and study hours are independent behaviors in this cohort.  \n",
+    "– **ParentalSupport vs. GPA**: modest positive link (~+0.19), indicating family involvement has a real, if smaller, effect on performance.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1fc54d46",
    "metadata": {},
    "source": [
@@ -513,6 +516,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2c59def",
+   "metadata": {},
+   "source": [
+    "– **StudyTime vs. GPA**: darker (higher‑class) points cluster toward higher GPA, but there’s overlap—suggesting some high‑GPA students achieved even with moderate study hours.  \n",
+    "– **Absences vs. GPA**: a clear downward diagonal: students with >20 absences nearly never exceed a 2.0 GPA, while those with <5 absences often score >3.0.  \n",
+    "– **Density diagonals**: GradeClass 4 (dark) peaks at low‑absence, high‑GPA; GradeClass 0 (light) the reverse. This visual confirms the need to treat absences as a top predictor.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99e0a9de",
+   "metadata": {},
+   "source": [
+    "### GPA distribution by Tutoring & Extracurricular"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "93870048",
@@ -537,6 +558,16 @@
     "axes[1].set_title('GPA by Extracurricular')\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21b0aaed",
+   "metadata": {},
+   "source": [
+    "- Students who receive tutoring (1) have a median GPA ~2.1 vs. ~1.8 for non‑tutored peers, and a higher 75th percentile—evidence that tutoring lifts the top end as well as the middle of the distribution.\n",
+    "\n",
+    "- Participants (1) show a median GPA ~2.0 vs. ~1.9 for non‑participants, but also a tighter IQR—suggesting extracurricular involvement not only raises grades slightly but also stabilizes performance.\n"
    ]
   },
   {
@@ -571,6 +602,14 @@
    "source": [
     "summary = data.groupby('GradeClass')[['StudyTimeWeekly','Absences','GPA']].mean()\n",
     "print(\"Mean StudyTime, Absences & GPA by GradeClass:\\n\", summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a40435a4",
+   "metadata": {},
+   "source": [
+    "- As GradeClass increases from 0 to 4, mean StudyTimeWeekly steadily decreases (11.85→9.18 hrs) while absences sharply rise (5.8→20.8 days) and GPA plummets (3.10→1.21). This gradient underlines how declining study habits and attendance drive lower grade outcomes—and highlights GradeClass 0 as the “best‐performing” group in this coding scheme."
    ]
   }
  ],
