--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -5,23 +5,27 @@
    "id": "697c3d63",
    "metadata": {},
    "source": [
-    "# Feature Engineering (Step 8)"
+    "# Feature Engineering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "85cefbfa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
+    "import pandas as pd\n",
     "\n",
     "# Dynamically add the src/ folder to the system path\n",
     "sys.path.append(os.path.abspath(os.path.join(\"..\", \"src\")))\n",
     "\n",
-    "import pandas as pd\n",
+    "from preprocess_data import gpa_to_grade_class\n",
+    "\n",
+    "# Define the output path\n",
+    "output_path = \"../data/processed/engineered_data.csv\"\n",
     "\n",
     "# Load the cleaned dataset\n",
     "df = pd.read_csv(\"../data/processed/cleaned_data.csv\")"
@@ -32,7 +36,7 @@
    "id": "760abc09",
    "metadata": {},
    "source": [
-    "### 🎯 Applying GPA to GradeClass Transformation\n",
+    "## 1. Applying GPA to GradeClass Transformation\n",
     "\n",
     "We have already defined the `gpa_to_grade_class()` function in our `feature_engineering.py` script. Here, we import and apply it to convert the continuous `GPA` column into a categorical `GradeClass` variable:\n",
     "\n",
@@ -42,13 +46,13 @@
     "- **3: 'D'** (2.0 ≤ GPA < 2.5)  \n",
     "- **4: 'F'** (GPA < 2.0)  \n",
     "\n",
-    "This target variable will be used in our classification models and GPA will be removed because it was directly used to create the target variable."
+    "This target variable will be used in our classification models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9197edf1",
+   "execution_count": null,
+   "id": "0a03ca64",
    "metadata": {},
    "outputs": [
     {
@@ -115,15 +119,12 @@
        "4  1.288061           4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 📥 Import the function from the local feature engineering file\n",
-    "from feature_engineering import gpa_to_grade_class\n",
-    "\n",
     "# 🔁 Apply the function to the GPA column\n",
     "df['GradeClass'] = gpa_to_grade_class(df['GPA'])\n",
     "\n",
@@ -132,9 +133,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2926bb2f",
+   "metadata": {},
+   "source": [
+    "## 2)  Removing GPA\n",
+    "We must remove GPA from our training data, because we used it to directly calculate our target variable with the transformation step 2 to not let the model learn the wrong pattern."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b2b7e518",
+   "id": "9197edf1",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +166,7 @@
    "id": "70148213",
    "metadata": {},
    "source": [
-    "### 💾 Save the Engineered Dataset\n",
+    "## 💾 Save the Engineered Dataset\n",
     "\n",
     "We save the final engineered DataFrame to the `data/processed/` folder for use in the modeling phase."
    ]
@@ -176,19 +186,16 @@
     }
    ],
    "source": [
-    "# Define the output path\n",
-    "output_path = \"../data/processed/engineered_data.csv\"\n",
-    "\n",
     "# Save the DataFrame\n",
     "df.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"✅ Engineered data saved to: {output_path}\")\n"
+    "print(f\"✅ Engineered data saved to: {output_path}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fucking_testing",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
