--- a/notebooks/best_model.ipynb
+++ b/notebooks/best_model.ipynb
@@ -3,16 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b0cb21f7",
+   "id": "cdef5929",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8225469728601252\n",
+      "Evaluation Metrics for Logistic Regression (Raw)\n",
+      "--------------------------------------------------\n",
+      "Accuracy     : 0.8225\n",
+      "Precision    : 0.8276\n",
+      "Recall       : 0.8225\n",
+      "F1 Score     : 0.8223\n",
+      "\n",
       "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.86      0.40      0.55        15\n",
       "           1       0.67      0.69      0.68        49\n",
@@ -24,12 +30,6 @@
       "   macro avg       0.76      0.69      0.71       479\n",
       "weighted avg       0.83      0.82      0.82       479\n",
       "\n",
-      "Confusion Matrix:\n",
-      " [[  6   9   0   0   0]\n",
-      " [  1  34  14   0   0]\n",
-      " [  0   8  53  16   0]\n",
-      " [  0   0  14  59  10]\n",
-      " [  0   0   0  13 242]]\n",
       "Top Feature Coefficients across classes:\n",
       "     Class          Feature  Coefficient\n",
       "29      4         Absences     9.163548\n",
@@ -49,11 +49,28 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-    "import numpy as np\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report, confusion_matrix\n",
+    "\n",
+    "# 🔁 Reusable evaluation function\n",
+    "def evaluate_classification_model(y_true, y_pred, model_name=\"Model\"):\n",
+    "    print(f\"Evaluation Metrics for {model_name}\")\n",
+    "    print(\"-\" * 50)\n",
+    "    accuracy = accuracy_score(y_true, y_pred)\n",
+    "    precision = precision_score(y_true, y_pred, average='weighted', zero_division=0)\n",
+    "    recall = recall_score(y_true, y_pred, average='weighted', zero_division=0)\n",
+    "    f1 = f1_score(y_true, y_pred, average='weighted', zero_division=0)\n",
+    "    \n",
+    "    print(f\"Accuracy     : {accuracy:.4f}\")\n",
+    "    print(f\"Precision    : {precision:.4f}\")\n",
+    "    print(f\"Recall       : {recall:.4f}\")\n",
+    "    print(f\"F1 Score     : {f1:.4f}\")\n",
+    "    \n",
+    "    print(\"\\nClassification Report:\")\n",
+    "    print(classification_report(y_true, y_pred, zero_division=0))\n",
     "\n",
     "# Load the dataset\n",
     "df = pd.read_csv('../data/processed/engineered_data.csv')\n",
@@ -78,12 +95,10 @@
     "# Predict\n",
     "y_pred = log_reg.predict(X_test_scaled)\n",
     "\n",
-    "# Evaluation\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n",
-    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
+    "# ✅ Evaluate\n",
+    "evaluate_classification_model(y_true=y_test, y_pred=y_pred, model_name=\"Logistic Regression (Raw)\")\n",
     "\n",
-    "# Feature Importance (Coefficients for each class)\n",
+    "# 🔍 Feature Importance (Coefficients for each class)\n",
     "coeffs = pd.DataFrame(log_reg.coef_, columns=X.columns)\n",
     "coeffs['Class'] = log_reg.classes_\n",
     "\n",
