--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -401,7 +401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fucking_testing",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
