--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -163,6 +163,64 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d8479c5",
+   "metadata": {},
+   "source": [
+    "## 3) Engagement Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36826cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flags = ['Tutoring', 'Extracurricular', 'Sports', 'Music', 'Volunteering']\n",
+    "df['Engagement'] = df[flags].sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40c27875",
+   "metadata": {},
+   "source": [
+    "## 4) Family Support Index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3cc7080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['FamilySupport'] = df['ParentalEducation'] * df['ParentalSupport']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4755532",
+   "metadata": {},
+   "source": [
+    "## 5) One-hot encode all remaining categorical columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8858c56c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # 4) One-hot encode all remaining categorical columns\n",
+    "cat_cols = df.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "if cat_cols:\n",
+    "    df = pd.get_dummies(df, columns=cat_cols, drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "70148213",
    "metadata": {},
    "source": [
