--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -166,7 +166,8 @@
    "id": "1d8479c5",
    "metadata": {},
    "source": [
-    "## 3) Engagement Score"
+    "## 3) Engagement Score\n",
+    "By summing the binary participation flags for Tutoring, Extracurricular, Sports, Music, and Volunteering into a single “Engagement” feature, we capture each student’s overall level of involvement in non‑academic activities. This aggregated score provides a more holistic measure of engagement than any one flag alone, helping the model learn whether—and to what extent—broader extracurricular involvement correlates with academic performance."
    ]
   },
   {
@@ -185,7 +186,8 @@
    "id": "40c27875",
    "metadata": {},
    "source": [
-    "## 4) Family Support Index"
+    "## 4) Family Support Index\n",
+    "Multiplying the numeric ParentalEducation and ParentalSupport variables creates a combined “FamilySupport” index that reflects both the parents’ educational background and the emotional/academic support they provide. Because these two factors likely interact (e.g., highly educated parents who are also very supportive may have an outsized positive effect), the product captures that synergy in one feature."
    ]
   },
   {
@@ -203,7 +205,8 @@
    "id": "f4755532",
    "metadata": {},
    "source": [
-    "## 5) One-hot encode all remaining categorical columns"
+    "## 5) One-hot encode all remaining categorical columns\n",
+    "Most machine‑learning algorithms require purely numeric inputs. By converting any leftover nominal or categorical features into binary indicator (dummy) columns—and dropping one level per feature to avoid multicollinearity (“dummy‑variable trap”)—we ensure all predictors are numeric and ready for modeling without introducing redundant information."
    ]
   },
   {
@@ -213,7 +216,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " # 4) One-hot encode all remaining categorical columns\n",
     "cat_cols = df.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "if cat_cols:\n",
     "    df = pd.get_dummies(df, columns=cat_cols, drop_first=True)"
